# challenge_technique_illuin

./: .gitignore  README.md  eda_and_preprocessing.ipynb  main.py  predict_cli.py  pyproject.toml  training_notebook.ipynb
data/: preprocessed_dataset.parquet  preprocessed_train_val_dataset.parquet
models/: difficulty_scaler.pkl  metadata.pkl  multimodal_model.pkl  text_model.pkl  tfidf_vectorizer.pkl
